--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,6 @@ html,
 body,
 .main{
     height: 100%;
-    padding-top: 40px;
 }
 
 .margin20{
@@ -35,3 +34,6 @@ body,
     padding-left: 20px;
 }
 
+.highlight{
+    background-color: yellow;
+}
